[project]
name = "mkdocs-kpn"
version = "1.10.0"
description = "A KPN-styles theme for MkDocs"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Santiago Fraire Willemoës", email = "de-streams@kpn.com" }]
keywords = ["documentation", "mkdocs", "theme"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: JavaScript",
  "Programming Language :: Python",
  "Topic :: Documentation",
  "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
  "markdown>=3.3.7",
  "mkdocs>=1.0,<2",
  "mkdocs-print-site-plugin>=2.8",
  "plantuml-markdown>=3.4.2,<4",
  "pymdown-extensions>=9.4",
]

[project.urls]
Homepage = "https://github.com/kpn/mkdocs-kpn-theme"

[project.entry-points."mkdocs.themes"]
kpn = "kpn_theme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kpn_theme"]

[tool.hatch.build.targets.sdist]
include = ["kpn_theme/**", "LICENSE", "README.md"]
